ArticleCollection 進行中，findByMemberIdWithArticle 方法須建立 DTO 對應